deploy/manifests/dev/us-east-2/tenant/storetheindex/patch-indexer.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: indexer
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node.kubernetes.io/instance-type
                    operator: In
                    values:
                      - "r5b.xlarge"
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
      containers:
        - name: indexer
          volumeMounts:
            - name: identity
              mountPath: /identity
          resources:
            limits:
              cpu: "3.5"
              memory: 25Gi
            requests:
              cpu: "3.5"
              memory: 25Gi
      # Require r5b instance types to run index provider pods.
      tolerations:
        - key: dedicated
          operator: Equal
          value: r5b
          effect: NoSchedule
      volumes:
        - name: identity
          secret:
            secretName: indexer-identity
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: io2
        resources:
          requests:
            storage: 10Ti
